--- a/src/main/resources/templates/scientists/sci__main_articles.html
+++ b/src/main/resources/templates/scientists/sci__main_articles.html
@@ -35,7 +35,7 @@
 
 <div class="content flex-column">
     <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
-    <div class="form-item gray" th:if="${articles == null or articles.isEmpty()}">
+    <div class="form-item_big gray" th:if="${articles == null or articles.isEmpty()}">
         You didn't write any articles
     </div>
 </div>
