--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -32,9 +32,9 @@
     </div>
 </div>
 
-<div class="content">
+<div class="content flex-column">
     <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
-    <div class="form-item gray" th:if="${experiments} == null">
+    <div class="form-item_big gray" th:if="${experiments} == null">
         You didn't submit any experiments
     </div>
     <div th:each="exp: ${experiments}" class=" content__item">
