--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -34,7 +34,7 @@
 
 <div class="content flex-column">
     <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
-    <div class="form-item_big gray" th:if="${experiments} == null">
+    <div class="form-item_big gray" th:if="${experiments == null or experiments.isEmpty()}">
         You didn't submit any experiments
     </div>
     <div th:each="exp: ${experiments}" class=" content__item">
