--- a/src/main/resources/templates/scientists/sci__profile.html
+++ b/src/main/resources/templates/scientists/sci__profile.html
@@ -38,7 +38,7 @@
         <input type="submit" class="button form-item" value="Change password">
     </form>
     <b class="form-item_big font-big">Your cash rewards</b>
-    <div class="form-item gray" th:if="${cashRewards} == null">
+    <div class="form-item gray" th:if="${cashRewards == null or cashRewards.isEmpty()}">
         You don't have any rewards yet...
     </div>
     <div th:each="reward: ${cashRewards}" class="content__item">
