--- a/src/main/resources/templates/scientists/sci__report.html
+++ b/src/main/resources/templates/scientists/sci__report.html
@@ -15,44 +15,82 @@
             <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
         </a>
     </div>
-    <form action="#" th:action="@{/sci/report}" th:object="${form}" method="post" class="grid__inputs flex-column">
+    <form id="report-form" action="#" th:action="@{/sci/report}" th:object="${form}" method="post"
+          class="grid__inputs flex-column">
         <label class="form-item">
             <b>Experiment id</b>
             <input th:required="true" th:field="*{experimentId}" disabled class="input_big">
         </label>
         <label class="form-item">
+            <b>Did you synthesize a weapon?</b>
+            <select id="isSynthesized" name="isSynthesized" class="input_big">
+                <option value="0"> No</option>
+                <option value="1"> Yes</option>
+                <option value="2"> Yes, a brand-new one</option>
+            </select>
+        </label>
+        <label class="form-item">
             <b>Report</b>
             <textarea th:required="true" th:field="*{result}" class="text-area_big input_big"></textarea>
         </label>
-        <input type="submit" class="button form-item" value="Submit Experiment">
+        <input type="submit" class="button form-item" value="Submit report">
     </form>
-    <div class="grid__assistants-table">
+    <div class="grid__weapons-table hidden">
         <table>
             <thead>
             <tr>
-                <td>
-                    id
-                </td>
-                <td>
-                    Name
-                </td>
-                <td>
-                    Position
-                </td>
-                <td>
-                    Level
-                </td>
+                <td> Id</td>
+                <td> Name</td>
+                <td> Type</td>
+                <td> Description</td>
             </tr>
             </thead>
-            <tbody id="assistants-tbody">
-<!--            <tr th:each="assistant : ${assistants}" th:attr="data-id=${assistant.id}">-->
-<!--                <td th:text="${assistant.id}"></td>-->
-<!--                <td th:text="${assistant.name}"></td>-->
-<!--                <td th:text="${assistant.position}"></td>-->
-<!--                <td th:text="${assistant.level}"></td>-->
-<!--            </tr>-->
+            <tbody id="weapons-tbody">
+            <tr th:each="weapon : ${weapons}" th:attr="data-id=${weapon.id}">
+                <td th:text="${weapon.id}"></td>
+                <td th:text="${weapon.name}"></td>
+                <td th:text="${weapon.type}"></td>
+                <td th:text="${weapon.description}"></td>
+            </tr>
             </tbody>
         </table>
+    </div>
+    <div class="grid__weapons-form hidden">
+        <b class="form-item">New weapon</b>
+        <label class="form-item_small">
+            <b>Name</b>
+            <input class="input_big" id="weaponName" name="weaponName" form="report-form">
+        </label>
+        <label class="form-item_small">
+            <b>Type</b>
+            <select id="weaponType" name="weaponType" class="input_big">
+                <option value="melee"> Melee</option>
+                <option value="pistol"> Pistol</option>
+                <option value="submachine_gun"> Submachine gun</option>
+                <option value="assault_rifle"> Assault rifle</option>
+                <option value="light_machine_gun"> Light machine gun</option>
+                <option value="sniper_rifle"> Sniper rifle</option>
+                <option value="alien"> Alien</option>
+            </select>
+        </label>
+        <label class="form-item_small">
+            <b>Description</b>
+            <input class="input_big" id="weaponDescription" name="weaponDescription" form="report-form">
+        </label>
+        <label class="form-item_small">
+            <b>Price</b>
+            <input class="input_big" id="weaponPrice" name="weaponPrice" type="number" min="0" form="report-form">
+        </label>
+        <label class="form-item_small">
+            <b>Level</b>
+            <input class="input_big" id="weaponLevel" name="weaponLevel" type="number" min="1" max="10" step="1"
+                   form="report-form">
+        </label>
+        <label class="form-item_small">
+            <b>Quantity</b>
+            <input class="input_big" id="weaponQuantity" name="weaponQuantity" type="number" min="1" step="1"
+                   form="report-form">
+        </label>
     </div>
 </div>
 <script rel="script" type="text/javascript" th:src="@{/js/scientists/sci__report.js}"></script>
