--- a/src/main/resources/templates/scientists/sci__new-experiment.html
+++ b/src/main/resources/templates/scientists/sci__new-experiment.html
@@ -42,18 +42,10 @@
         <table>
             <thead>
             <tr>
-                <td>
-                    id
-                </td>
-                <td>
-                    Name
-                </td>
-                <td>
-                    Position
-                </td>
-                <td>
-                    Level
-                </td>
+                <td> Id</td>
+                <td> Name</td>
+                <td> Position</td>
+                <td> Level</td>
             </tr>
             </thead>
             <tbody id="assistants-tbody">
