--- a/src/main/resources/static/css/scientists/sci__report.css
+++ b/src/main/resources/static/css/scientists/sci__report.css
@@ -1,4 +1,4 @@
- @import url("../common.css");
+@import url("../common.css");
 
 .header {
     grid-area: header;
@@ -6,13 +6,18 @@
 
 .grid {
     display: grid;
-    grid: "header header" 80px "inputs weapons";
+    grid: "header header" 80px "inputs-top weapons" "inputs-bottom weapons";
     padding: 0 5px;
 }
 
-.grid__inputs {
-    grid-area: inputs;
+.grid__inputs-top {
+    grid-area: inputs-top;
     margin-top: 10px;
+}
+
+.grid__inputs-bottom {
+    grid-area: inputs-bottom;
+    text-align: left;
 }
 
 .text-area_big {
@@ -36,26 +41,32 @@
 .grid__weapons-table td {
     padding: 4px 10px;
     border: 1px solid black;
+    word-break: break-word;
 }
 
 .grid__weapons-form {
     grid-area: weapons;
+    text-align: left;
 }
 
 #weapons-tbody {
     cursor: pointer;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 900px) {
     .grid {
-        grid: "header" 80px "inputs";
+        grid: "header" 80px "inputs-top" "weapons" "inputs-bottom";
         padding: 0;
     }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 400px) {
     body {
         margin: 5px;
+    }
+
+    .grid__weapons-table {
+        font-size: 16px;
     }
 
     .input_big {
