--- a/src/main/resources/templates/administrators/admin__employees.html
+++ b/src/main/resources/templates/administrators/admin__employees.html
@@ -38,7 +38,7 @@
                 <td th:text="${employee.position}"></td>
                 <td th:text="${employee.level}"></td>
                 <td th:text="${employee.salary}"></td>
-                <td class="emp-doe" th:text="${employee.dateOfEmployment}"></td>
+                <td class="date-to-format" th:text="${employee.dateOfEmployment}"></td>
                 <td class="emp-status" th:text="${employee.status}"></td>
             </tr>
             </tbody>
@@ -59,36 +59,36 @@
               th:object="${form_add}" method="post" id="add-interface" class="flex-column">
             <label class="form-item_small">
                 <b>Login</b>
-                <input th:required="true" th:field="*{username}" class="input_big">
+                <input required th:field="*{username}" class="input_big">
             </label>
             <label class="form-item_small">
                 <b>Password</b>
-                <input th:required="true" th:field="*{password}" type="password" class="input_big">
+                <input required th:field="*{password}" type="password" class="input_big">
             </label>
             <label class="form-item_small">
                 <b>Name</b>
-                <input th:required="true" th:field="*{name}" class="input_big">
+                <input required th:field="*{name}" class="input_big">
             </label>
             <label class="form-item_small">
                 <b>Salary</b>
-                <input th:required="true" th:field="*{salary}" type="number" min="0" class="input_big">
+                <input required th:field="*{salary}" type="number" min="0" class="input_big">
             </label>
             <label class="form-item_small">
                 <b>Position</b>
-                <input th:required="true" th:field="*{position}" class="input_big">
+                <input required th:field="*{position}" class="input_big">
             </label>
             <label class="form-item_small">
                 <b>Role</b>
                 <select th:field="*{type}" class="input_big">
-                    <option th:value="security" th:text="Security"></option>
-                    <option th:value="scientist" th:text="Scientist"></option>
-                    <option th:value="manager" th:text="Manager"></option>
-                    <option th:value="administrator" th:text="Administrator"></option>
+                    <option value="security">Security</option>
+                    <option value="scientist">Scientist</option>
+                    <option value="manager">Manager</option>
+                    <option value="administrator">Administrator</option>
                 </select>
             </label>
             <label class="form-item_small">
                 <b>Level</b>
-                <input th:required="true" th:field="*{level}" type="number" min="1" max="10" class="input_big">
+                <input required th:field="*{level}" type="number" min="1" max="10" class="input_big">
             </label>
             <input type="submit" class="button form-item" value="Add employee">
         </form>
@@ -101,27 +101,27 @@
             </label>
             <label class="form-item_small">
                 <b>Name</b>
-                <input th:required="true" th:field="*{name_edit}" class="input_big">
+                <input required th:field="*{name_edit}" class="input_big">
             </label>
             <label class="form-item_small">
                 <b>Salary</b>
-                <input th:required="true" th:field="*{salary_edit}" type="number" min="0" class="input_big">
+                <input required th:field="*{salary_edit}" type="number" min="0" class="input_big">
             </label>
             <label class="form-item_small">
                 <b>Position</b>
-                <input th:required="true" th:field="*{position_edit}" class="input_big">
+                <input required th:field="*{position_edit}" class="input_big">
             </label>
             <label class="form-item_small">
                 <b>Status</b>
                 <select th:field="*{status_edit}" class="input_big">
-                    <option th:value="working" th:text="Working"></option>
-                    <option th:value="fired" th:text="Fired"></option>
-                    <option th:value="dead" th:text="Dead"></option>
+                    <option value="working">Working</option>
+                    <option value="fired">Fired</option>
+                    <option value="dead">Dead</option>
                 </select>
             </label>
             <label class="form-item_small">
                 <b>Level</b>
-                <input th:required="true" th:field="*{level_edit}" type="number" min="1" max="10" step="1"
+                <input required th:field="*{level_edit}" type="number" min="1" max="10" step="1"
                        class="input_big">
             </label>
             <input type="submit" class="button form-item" value="Edit employee">
@@ -138,16 +138,17 @@
               class="grid__inputs_reward hidden flex-column">
             <label class="form-item_small">
                 <b>Employee Id</b>
-                <input th:required="true" th:field="*{id_cash}" type="number" class="input_big">
+                <input required th:field="*{id_cash}" type="number" class="input_big">
             </label>
             <label class="form-item_small">
                 <b>Reward</b>
-                <input th:required="true" th:field="*{reward}" type="number" min="0" class="input_big">
+                <input required th:field="*{reward}" type="number" min="0" class="input_big">
             </label>
             <input type="submit" class="button form-item" value="Give reward">
         </form>
     </div>
 </div>
 <script rel="script" type="text/javascript" th:src="@{/js/administrators/admin__employees.js}"></script>
+<script rel="script" type="text/javascript" th:src="@{/js/formatDateTime.js}"></script>
 </body>
 </html>
