--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -38,7 +38,7 @@
         You didn't submit any experiments
     </div>
     <div th:each="exp: ${experiments}" class=" content__item">
-        <div th:class="content__header"
+        <div class="content__header"
              th:classappend="|${exp.status.name()=='PENDING' ? 'pending' : exp.status.name()=='APPROVED' ? 'approved' : exp.status.name()=='REJECTED' ? 'rejected' : 'finished'}|">
             <div th:switch="${exp.status.name()}">
                 <img th:case="PENDING" class="content-icon" alt="pending" th:src="@{/images/clock.png}">
