--- a/src/main/resources/templates/scientists/sci__new-experiment.html
+++ b/src/main/resources/templates/scientists/sci__new-experiment.html
@@ -20,13 +20,13 @@
           class="grid__inputs-top flex-column">
         <label class="form-item">
             <b>Title</b>
-            <input th:required="true" th:field="*{title}" class="input_big">
+            <input required th:field="*{title}" class="input_big">
         </label>
         <label class="form-item">
             <b>Type</b>
             <select th:field="*{type}" class="input_big">
-                <option th:value="minor" th:text="Minor"></option>
-                <option th:value="major" th:text="Major"></option>
+                <option th:value="minor">Minor</option>
+                <option th:value="major">Major</option>
             </select>
         </label>
     </form>
