--- a/src/main/resources/static/css/administrators/admin__experiments-articles.css
+++ b/src/main/resources/static/css/administrators/admin__experiments-articles.css
@@ -1,40 +1,18 @@
 @import url("../common.css");
 
-.employee-header {
-    grid-area: header;
-}
-
-.grid {
-    display: grid;
-    grid: "header expButton artButton nothing" 50px "content content content content";
-    grid-template-columns: 2fr 3fr 2.5fr 2.5fr;
-    padding: 5px;
-}
-
-.grid__experiments {
-    grid-area: expButton;
-    margin-right: 20px;
-}
-
-.grid__articles {
-    grid-area: artButton;
-    margin-left: 20px;
+body {
+    margin: 0;
 }
 
 .grid-button {
     margin: auto;
     text-align: center;
-    font-size: 24px;
-    width: 220px;
-}
-
-.button_row {
-    margin: 0 15px;
+    width: 20vw;
 }
 
 .content {
-    grid-area: content;
     text-align: center;
+    margin-top: 84px;
 }
 
 .content__item {
@@ -54,10 +32,23 @@
     line-height: 22px;
 }
 
+.button-flex-row {
+    display: flex;
+    justify-content: center;
+}
+
+.button-flex-row * {
+    margin: 0 15px;
+}
+
 .content__main {
     word-break: break-word;
     text-align: left;
     padding: 12px;
+}
+
+.content__main_article {
+    text-align: center;
 }
 
 .content-icon {
@@ -65,38 +56,76 @@
     height: 25px;
 }
 
-@media (max-width: 1200px) {
-    .grid {
-        grid-template-columns: 2fr 3fr 2.5fr 2.5fr;
-    }
+.mobile-title {
+    margin-left: 30px;
+    font-size: 20px;
+}
 
-    .grid-button {
-        width: 180px;
-        font-size: 22px;
-    }
+.burger {
+    cursor: pointer;
+}
 
-    .grid__experiments {
-        margin-right: 5px;
-    }
+.button_back_mobile {
+    display: none;
+}
 
-    .grid__articles {
-        margin-left: 5px;
-    }
+#header_mobile {
+    display: none;
 }
 
 @media (max-width: 1000px) {
-    .grid {
-        grid: "header header" 50px "expButton artButton" 80px "content content";
-        grid-template-columns: 1fr 1fr;
+    .grid-button {
+        width: 25vw;
+        padding: 10px 15px;
+    }
+
+    .content__item {
+        width: 80%
     }
 }
 
-@media (max-width: 400px) {
-    .grid {
-        grid: "header" 75px "expButton" 65px "artButton" 65px "content";
+@media (max-width: 700px) {
+    #header_mobile {
+        display: flex;
+    }
+
+    .flex-row-left {
+        align-items: center;
+    }
+
+    #mobile-menu {
+        display: none;
+    }
+
+    .content {
+        margin-top: 62px;
+    }
+
+    .flex-row {
+        flex-direction: column;
+    }
+
+    .content__item {
+        width: 92%
+    }
+
+    .button_back {
+        display: none;
+    }
+
+    .button_back_mobile {
+        display: block;
     }
 
     .grid-button {
-        margin: auto;
+        width: 80vw;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size: 22px;
+    }
+
+    .button-flex-row * {
+        font-size: 18px;
+        margin: 0 6px;
     }
 }
